add random color button

--- a/gol.html
+++ b/gol.html
@@ -71,6 +71,9 @@
           <button id="random" type="button" class="btn btn-primary">
             Random
           </button>
+          <button id="randomColor" type="button" class="btn btn-primary">
+            Random Color
+          </button>
         </div>
         <div class="color-gp">
           <span class="speed">-- Select Color --</span>
